# safety-not-found-404

./: .gitattributes  .gitignore  README.md  index.html  run_experiment.py  run_factorial_ab_experiment.py  run_factorial_abd_experiment.py  run_factorial_experiment.py
.claude/: settings.local.json
docs/: README.md  index.html
safety-not-found-404-codebase/services/research-engine/: .env.example  .gitignore  Makefile  PROJECT_STATUS_REPORT.md  README.md  pyproject.toml  requirements.txt
safety-not-found-404-codebase/services/research-engine/configs/: sequence_experiments.sample.json
safety-not-found-404-codebase/services/research-engine/legacy/: README.md
safety-not-found-404-codebase/services/research-engine/legacy/section 3/: 3-1_results_openai.json  command.md  eval.py
safety-not-found-404-codebase/services/research-engine/legacy/section2/: maze_pipeline_en.py  maze_pipeline_ko.py
safety-not-found-404-codebase/services/research-engine/scripts/: build_submission_package.py  evaluate_submission.py  extract_video_frames.py  generate_safety_vln_dataset.py  run_ab_eval.py  run_decision_experiment.py  run_dilemma_experiment.py  run_maze_pipeline.py  run_safety_vln_benchmark.py  run_samarian_experiment.py  run_sequence.py  validate_safety_vln_dataset.py
safety-not-found-404-codebase/services/research-engine/tests/: test_choice_parser.py  test_common.py  test_decision_cli.py  test_decision_engine.py  test_evaluate_submission.py  test_judge.py  test_llm_factory.py  test_maze_core.py  test_maze_pipeline_integration.py  test_provider_routing.py  test_reporting_stats.py  test_safety_vln_dataset.py  test_safety_vln_engine.py  test_safety_vln_scoring.py  test_scoring_edge_cases.py  test_submission_package.py
(+287 files in other folders)
